Added High Voltage gem

--- a/app/views/pages/test.html.erb
+++ b/app/views/pages/test.html.erb
@@ -1,8 +1,8 @@
-<%= render "shared/error", obj: @chef %>  <!-- obj: @recipe this passes in this instance variable into the partial. If you want to run this in chefs - obj: @chef  -->
+<%#= render "shared/error", obj: @chef %>  <!-- obj: @recipe this passes in this instance variable into the partial. If you want to run this in chefs - obj: @chef  -->
 
 <div class="row">
    <div class="col-md-12">
-    <%= form_with(model: @chef, local: true :html => {class: "form-horizontal", role: "form"}) do |f| %> <!-- This is how you add bootstrap class in ruby code -->
+    <%= form_with(model: @chef, local: true ,class: "form-horizontal", role: "form") do |f| %> <!-- This is how you add bootstrap class in ruby code -->
      <div class="form-group">
        <div class="control-label col-md-2">
          <%= f.label :chef_name, "Name of Chef" %>
@@ -41,7 +41,7 @@
      
      <div class="form-group">
        <div class="col-md-offset-2 col-md-10 ">
-         <%= f.submit(@chef.new_record? ? "Create your account" : "Update my account",  
+         <%= f.submit( "Create your account",  
                        class: "btn btn-primary btn-lg nice_green" ) %>
          <!--<%= link_to "All Recipes", recipes_path, class: "btn btn-primary btn-lg nice_green" %> -->
        </div>
