--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,1 +1,309 @@
 @import 'bootstrap/dist/css/bootstrap';
+
+.center {
+  text-align: center;
+}
+
+#logo {
+  float: left;
+  font-size: 1.7em;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
+
+#logo:hover {
+  color : #fff;
+  text-decoration: none;
+}
+
+/* Navbar */
+
+//font color
+.navbar, a {
+  color: #fff !important;
+}
+
+.navbar .navbar-nav > li > a:hover  {
+  color: #fff;
+  text-decoration: none;
+}
+
+.dropdown-menu {
+  margin-top: 10px !important;
+  background: #073B15;
+  a:hover {
+    background: #ADBB26 !important;
+  }
+} 
+.navbar .navbar-nav > .active > a:hover 
+{
+  color: #fff;
+  text-decoration: none;
+}
+
+.nav-col {
+  background: #073B15;
+}
+
+.navbar .navbar-nav .nice_green_nav {
+   background-color: #ADBB26;
+   border-color: #073B15;
+   color: #fff;
+}
+
+// Toggle bar
+.navbar .navbar-toggle .icon-bar {
+    background-color: #fff !important;
+}
+
+/* For Jumbotron */
+
+.jumbotron {
+  background-image: asset-url("cover.png");
+  background-size: cover;
+  height: 400px;
+}
+
+
+
+.jumbotron h1 {
+  color: #fff;
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
+
+.jumbotron h2 {
+  color: #fff;
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
+
+ 
+
+/* Home Page */
+.bold-text {
+  font-weight: bold;
+}
+
+/* Home page sub pages */
+
+.jumbotron-avo {
+  background-image: asset-url("avo.png");
+  background-size: cover;
+  border-radius: 5px;
+  height: 400px;
+  color: #fff;
+}
+
+.jumbotron-healthy {
+  background-image: asset-url("healthy.png");
+  background-size: cover;
+  border-radius: 5px;
+  height: 400px;
+  color: #fff;
+}
+
+.jumbotron-chad {
+  background-image: asset-url("boule.png");
+  background-size: cover;
+  border-radius: 5px;
+  height: 500px;
+  color: #fff;
+}
+
+.pages-text {
+  font-family: "Garamond", sans-serif;
+  font-size: 18px;
+  
+}
+.textie {
+  font-weight: bold;
+  padding: 90px;
+}
+/* Buttons */
+.nice_green {
+  background-color : #073B15;
+  border-color: #073B15;
+}
+
+
+.nice_green:hover {
+  background-color: #ADBB26;
+  border-color: #ADBB26;
+  text-decoration: none;
+}
+
+/* Opposite of nice_green */
+.nice_green_inverse {
+  background-color : #ADBB26 ;
+  border-color: #ADBB26 ;
+}
+
+
+.nice_green_inverse:hover {
+  background-color: #073B15;
+  border-color: #073B15;
+  text-decoration: none;
+}
+
+/* On Recipe/Show Page */
+
+.recipe-actions {
+  padding-top: 5px;
+  a {
+    color: #fff !important;
+  }
+}
+
+/* On recipe / new page */
+
+.input_checkbox input {
+  width: auto !important;
+}
+  
+
+/* on Ingredient show page */
+.hither-green {
+  color: #ADBB26;
+}
+/* on Ingredient show page from ingredient partial in recipes..*/
+.addIngred a {
+  text-decoration: none;
+}
+
+/* Ingredient edit page */
+.apple_green {
+  color: #073B15;
+}
+
+/* in the _recipe partial */
+
+
+
+
+.white_font {
+  color: white !important;
+}
+
+/* Footer Section */
+
+.footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: #073B15;
+  padding-left: 20px;
+  padding-right: 20px;
+ 
+}
+
+
+.footer a {
+  color: #073B15;
+}
+
+.footer a:hover {
+  color: #073B15;
+  text-decoration: none;
+}
+
+.footer small {
+  float: left;
+}
+
+.footer ul {
+  float: right;
+  list-style: none;
+}
+
+.footer ul li {
+  float: left;
+  margin-left: 15px;
+}
+
+// Show Page
+
+.description {
+  margin-top: 0;
+}
+
+.yummy img{
+  border-radius: 5px;
+  @media (max-width: 480px) {
+    width: 100%;
+    height: auto;
+  }
+    }
+    
+.liking {
+  padding-left: 20px;
+}
+
+
+ 
+
+      
+    
+
+
+// links in show page
+
+.well a {
+  text-decoration: none;
+  color:  #073B15;
+}
+
+.well a:hover {
+  color: #ADBB26 ;
+}
+
+// Index page
+
+.chef_info {
+  margin-top: 10px;
+}
+
+//Messages Section
+
+.center-block {
+  float: none;
+}
+
+.chat-container {
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 150px;
+  width: 80;
+}
+
+.message-container {
+  .form-control {
+    float: left;
+    width: 80%;
+  }
+  .btn {
+    float: right;
+    position: relative;
+    height: 54% !important;
+    width: 18%;
+  }
+}
+
+.message {
+  padding-left: 10px;
+  padding-top: 10px;
+}
+
+.messages {
+  border: 1px solid #eaeaea;
+  height: 16em;
+  position: relative;
+  overflow: auto;
+}
