--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -1,2 +1,23 @@
-<h1>Ingredients#index</h1>
-<p>Find me in app/views/ingredients/index.html.erb</p>
+<%= render "shared/page_title", title: "Ingredients".capitalize %>
+
+<div class="center">
+  <%= will_paginate %>
+</div>
+<div class="center">
+  <% @ingredients.each do |ing| %>
+    <ul class="listing">
+      <div class="row">
+        <div class="well col-sm-6 col-sm-offset-3 <%= cycle('profile-green', '') %>">
+          <li class="chef-title"><%= link_to ing.name.capitalize, ingredient_path(ing) %></li>
+          <li><small>Added to <%= pluralize(ing.recipes.count, "recipe")if ing.recipes  %></small></li>
+          <% if logged_in? && current_chef.admin? && %>
+            <li><%= link_to "Edit This Ingredient", edit_ingredient_path(ing) %></li>
+          <% end %>
+        </div>
+      </div>  
+    </ul>
+  <% end %>
+</div>
+<div class="center">
+  <%= will_paginate %>
+</div>
