--- a/app/views/ingredients/new.html.erb
+++ b/app/views/ingredients/new.html.erb
@@ -1,2 +1,4 @@
-<h1>Ingredients#new</h1>
-<p>Find me in app/views/ingredients/new.html.erb</p>
+<%= render "shared/page_title", title: "Add a new ingredient" %>
+<%= render 'shared/error', obj: @ingredient %>
+
+<%= render 'form' %>
