--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,12 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render "layouts/navigation.html.erb" %>
+    
+    <%#= render "layouts/messages.html.erb" %>
+    <div class="container">
+      <%= yield %>
+    </div>
+    <%= render "layouts/footer.html.erb" %>
   </body>
 </html>
