--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,2 +1,3 @@
-<h1>Recipes#edit</h1>
-<p>Find me in app/views/recipes/edit.html.erb</p>
+<%= render "shared/page_title", title: "edit this recipe" %>
+
+<%= render "recipes/form" %>
