--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,2 +1,3 @@
-<h1>Recipes#new</h1>
-<p>Find me in app/views/recipes/new.html.erb</p>
+<%= render "shared/error", obj: @recipe %>  <!-- obj: @recipe this passes in this instance variable into the partial. If you want to run this in chefs - obj: @chef  -->
+
+<%= render "recipes/form" %>
