--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -6,10 +6,10 @@
       </section>
     </div>
     <div class= "col-md-8 well <%= cycle('profile-green', '') %>">
-      <h4><%= link_to recipe.name, recipe_path(recipe) %></h4>
-        <p class="white_font"><%= truncate(recipe.description, length: 150) %></p>
+      <h4 class="dark-green"><%= link_to recipe.name, recipe_path(recipe) %></h4>
+        <p><%= truncate(recipe.description, length: 150) %></p>
         <% if recipe.ingredients.any? %> <!-- The code below will enable all the ingredients to be displayed in Ingredients/show -->
-          <p>Ingredients: <%= render recipe.ingredients %></p> <!-- Need to add an Ingredient partial -->
+          <p class="dark-green">Ingredients: <%= render recipe.ingredients %></p> <!-- Need to add an Ingredient partial -->
         <% end %> 
           <p><span class="quiet"><small>Created <%= time_ago_in_words(recipe.created_at) %> ago by <%= recipe.chef.chefname.capitalize  %> | <%#= pluralize(recipe.comments.count, "Comment") %></small></span>
         </p>
@@ -20,17 +20,20 @@
                                                              class: "btn btn-sm btn-danger white_font"%>
         <% end %>
         <br />
-     
-       <!-- <div class="row liking">
+      <!--
+      <div class="row liking">
         <div class="row col-md-8">
           <%#= link_to like_recipe_path(recipe, like: true), method: :post do %>
             <i class="glyphicon glyphicon-thumbs-up"></i> 
-          <%# end %><%#= recipe.thumbs_up_total %>|| 
+          <%# end %>
+          <%#= recipe.thumbs_up_total %>|| 
           <%#= link_to like_recipe_path(recipe, like: false), method: :post do %>
             <i class="glyphicon glyphicon-thumbs-down"></i> 
           <%# end %><%#= recipe.thumbs_down_total %>
         </div>
-      </div>  -->
+      </div>
+      -->
+        
     </div>
   </div>  
 <% end %>
